# fast-vad

./: .gitignore  .pr-benchmark.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  fast_vad.pyi  main.py  pyproject.toml  test_repr.py
.github/workflows/: ci.yml
bench_py/: bench_feature_extractor.py  bench_vad.py
bench_rs/: Cargo.toml
bench_rs/benches/: vad_bench.rs
benches/: bench_feature_extractor.py  bench_vad.py  filterbank_bench.rs  vad_bench.rs
docs/: README.md
src/: lib.rs
src/vad/: constants.rs  detector.rs  filterbank.rs  mod.rs  simd.rs
tests/: test_feature_extractor.py  test_repr.py  test_vad.py
