[package]
name = "fast-vad"
version = "0.1.0"
edition = "2024"

[lib]
name = "fast_vad"
crate-type = ["cdylib", "lib"]

[dependencies]
ndarray = "0.17.2"
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features= ["extension-module"]}
rayon = "1.11.0"
realfft = "3.5.0"
wide = "1.1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "filterbank_bench"
harness = false
