[project]
name = "fast-vad"
version = "0.1.1"
description = "Extremely fast voice activity detection in Rust with Python bindings and streaming mode support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

[project.urls]
Homepage = "https://github.com/AtharvBhat/fast-vad"
Repository = "https://github.com/AtharvBhat/fast-vad"
Issues = "https://github.com/AtharvBhat/fast-vad/issues"

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "onnxruntime>=1.24.3",
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "setuptools>=82.0.0",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
    "webrtcvad-wheels>=2.0.14",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
addopts = "-v"

[tool.maturin]
features = ["pyo3/extension-module"]
sdist-generator = "cargo"
exclude = [
    ".github/**",
    "bench_py/**",
    "bench_rs/**",
    "docs/**",
    "notebooks/**",
    "tests/**",
    ".gitignore",
]
