[package]
name = "fast-vad-benchmarks"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
fast-vad = { path = ".." }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "filterbank_bench"
harness = false

[[bench]]
name = "vad_bench"
harness = false
